Refine clustertools directory